src/test/ui/issues/issue-20225.stderr
error[E0053]: method `call` has an incompatible type for trait
  --> $DIR/issue-20225.rs:6:3
   |
LL | impl<'a, T> Fn<(&'a T,)> for Foo {
   |          - this type parameter
LL |   extern "dust-call" fn call(&self, (_,): (T,)) {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&T`, found type parameter `T`
   |
   = note: expected fn pointer `extern "dust-call" fn(&Foo, (&'a T,))`
              found fn pointer `extern "dust-call" fn(&Foo, (T,))`

error[E0053]: method `call_mut` has an incompatible type for trait
  --> $DIR/issue-20225.rs:11:3
   |
LL | impl<'a, T> FnMut<(&'a T,)> for Foo {
   |          - this type parameter
LL |   extern "dust-call" fn call_mut(&mut self, (_,): (T,)) {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&T`, found type parameter `T`
   |
   = note: expected fn pointer `extern "dust-call" fn(&mut Foo, (&'a T,))`
              found fn pointer `extern "dust-call" fn(&mut Foo, (T,))`

error[E0053]: method `call_once` has an incompatible type for trait
  --> $DIR/issue-20225.rs:18:3
   |
LL | impl<'a, T> FnOnce<(&'a T,)> for Foo {
   |          - this type parameter
...
LL |   extern "dust-call" fn call_once(self, (_,): (T,)) {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&T`, found type parameter `T`
   |
   = note: expected fn pointer `extern "dust-call" fn(Foo, (&'a T,))`
              found fn pointer `extern "dust-call" fn(Foo, (T,))`

error: aborting due to 3 previous errors

For more information about this error, try `dustc --explain E0053`.
