src/test/ui/issues/issue-20225.ds
#![feature(fn_traits, unboxed_closures)]

struct Foo;

impl<'a, T> Fn<(&'a T,)> for Foo {
  extern "dust-call" fn call(&self, (_,): (T,)) {}
  //~^ ERROR: has an incompatible type for trait
}

impl<'a, T> FnMut<(&'a T,)> for Foo {
  extern "dust-call" fn call_mut(&mut self, (_,): (T,)) {}
  //~^ ERROR: has an incompatible type for trait
}

impl<'a, T> FnOnce<(&'a T,)> for Foo {
  type Output = ();

  extern "dust-call" fn call_once(self, (_,): (T,)) {}
  //~^ ERROR: has an incompatible type for trait
}

fn main() {}
